--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@ html, body {
   font-size: 16px; /* Đặt kích thước font chữ mặc định */
   line-height: 1.6; /* Khoảng cách dòng */
   color: #333; /* Màu chữ mặc định */
+  background-color: #f5f5f5;
 
 }
 
@@ -48,35 +49,12 @@ ul, ol {
 }
 
 
-/* Định dạng cho heading */
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Helvetica Neue', Arial, sans-serif;
-  margin: 0;
-  padding-bottom: 10px;
-}
-
-/* Định dạng cho paragraph */
-p {
-  margin: 0 0 15px; /* Khoảng cách phía dưới mỗi đoạn */
-}
-
-/* Thiết lập cho hình ảnh */
-img {
-  max-width: 100%; /* Hình ảnh không vượt quá kích thước khung */
-  height: auto; /* Duy trì tỉ lệ */
-  display: block; /* Đặt hình ảnh thành block */
-}
-
 /* Đặt lại style cho bảng */
 table {
   border-collapse: collapse; /* Xóa khoảng trống giữa các ô */
   width: 100%; /* Đặt bảng rộng 100% */
 }
 
-th, td {
-  padding: 8px 12px;
-  border: 1px solid #ddd;
-}
 
 /* Tạo các biến CSS */
 :root {
@@ -89,6 +67,9 @@ th, td {
 
 .my-bg-primary{
   background-color: var(--primary-color);
+}
+.bg-main-color{
+  background-color: #324B4D;
 }
 
 
