--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -265,7 +265,7 @@ table {
 .thumbnail-images {
   /* Sắp xếp các ảnh phụ theo chiều ngang và cách đều nhau */
   display: flex;
-  justify-content: space-between;
+  gap: 5px;
   margin-top: 15px;
 }
 
@@ -279,6 +279,10 @@ table {
 }
 
 .thumbnail-images img:hover {
+  /* Khi hover vào ảnh phụ, đổi màu viền */
+  border-color: #000;   
+}
+.thumbnail-images img.active {
   /* Khi hover vào ảnh phụ, đổi màu viền */
   border-color: #000;   
 }
@@ -611,30 +615,7 @@ table {
 /* styles/checkout.css */
 
 /* Nút "Tiến hành thanh toán" */
-.btn-primary {
-  background-color:yellow; /* Màu nền nút */
-  color: black; /* Màu chữ */
-  border: none; /* Không viền */
-  padding: 10px 20px; /* Khoảng cách bên trong */
-  font-size: 16px; /* Kích thước chữ */
-  border-radius: 5px; 
-  cursor: pointer; /* Con trỏ chuột */
-  transition: background-color 0.3s ease, transform 0.2s ease; 
-  width: 500px;
-  margin-left: 19px;
-  margin-top: 50px;
- 
-}
 
-/* Thay đổi màu khi di chuột */
-.btn-primary:hover {
-  background-color: #324B4D; /* Màu nền khi di chuột */
-}
-
-/* Hiệu ứng khi nhấn nút */
-.btn-primary:active {
-  transform: scale(0.95); /* Nhỏ lại khi nhấn */
-}
 
 /* Định dạng cho nhóm phương thức thanh toán và đơn vị vận chuyển */
 .payment-method-group,
