--- a/src/app/admin/san-pham/style.css
+++ b/src/app/admin/san-pham/style.css
@@ -26,6 +26,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .image-container:hover .hover-overlay {
